--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -4,8 +4,8 @@
 \usepackage{units}
 \usepackage[UKenglish]{babel}
 \usepackage[UKenglish]{isodate}
-\usepackage[style=footnote-dw]{biblatex}
-\bibliography{memoire-bb}
+%\usepackage[style=footnote-dw]{biblatex}
+%\bibliography{memoire-bb}
 
 \newcommand{\al}{$<$}
 \newcommand{\ar}{$>$}
@@ -41,7 +41,7 @@ mobile devices, such as smartphones and tablets. Ever since its unveiling
 in 2007, it has been increasing its market share, running on 68.1\% of 
 smartphones sold in the second quarter of 2012 according to a report by 
 the International Data Corporation. 
-\cite{www.idc.com/getdoc.jsp?containerId=prUS23638712}
+\footnote[1]{www.idc.com/getdoc.jsp?containerId=prUS23638712}
 
 Unfortunately, with its growing popularity, the platform became a frequent
 target of increasingly sophisticated malware, masquerading as legitimate
@@ -57,7 +57,7 @@ other competing mobile operating systems. These methods range from
 static analysis of the executable code, all the way to enforcing sandboxing 
 by virtualization. 
 
-One such approach is shown in TaintDroid \cite{www.appanalysis.org}, 
+One such approach is shown in TaintDroid \footnote[2]{www.appanalysis.org}, 
 a project developed by a group of researchers from The Pennsylvania State
 University, Duke University and Intel Labs. They point out that the
 access control in Android is rather coarse-grained, with all-or-nothing
@@ -115,7 +115,7 @@ of the work will be done on my personal computer, but testing on a large
 sample of applications will need to be executed on a PWF machine. 
 
 Large collection of infected applications have been obtained from the
-Android Malware Genome Project \cite{www.malgenomeproject.org}. 
+Android Malware Genome Project \footnote[3]{www.malgenomeproject.org}. 
 Sufficient disc allocation of 3GB will be needed on the PWF to store
 a snapshot of the repository. 
 
@@ -343,5 +343,5 @@ successfully completed.
 %   \item{\textbf{Rest:} Dissertation}
 \end{itemize}
 
-\printbibliography
+%\printbibliography
 \end{document}
