--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -16,6 +16,9 @@
 \begin{document}
 
 \thispagestyle{empty}
+\textheight = 650pt
+\topmargin = 0pt
+\voffset = -10pt
 
 %\rightline{\large\emph{David Brazdil}}
 %\medskip
@@ -107,21 +110,6 @@ before it is loaded back into the device and executed leaves room for static
 analysis of the code, perhaps even modification of its behaviour. Limitations 
 and advantages of both solutions will be thoroughly compared in the evaluation 
 section of the dissertation
-
-\section*{Resources Required}
-
-Development will require a computer with the Android SDK installed. Most 
-of the work will be done on my personal computer, but testing on a large 
-sample of applications will need to be executed on a PWF machine. 
-
-Large collection of infected applications have been obtained from the
-Android Malware Genome Project \footnote[3]{www.malgenomeproject.org}. 
-Sufficient disc allocation of 3GB will be needed on the PWF to store
-a snapshot of the repository. 
-
-An Android smartphone will be supplied by the Department to test 
-the project on. In case of problems, the Android emulator can be used 
-instead.
 
 \section*{Starting Point}
 
@@ -344,6 +332,27 @@ successfully completed.
 %   \item{\textbf{Fortnight 8:} Large-sample testing and evaluation}
 %   \item{\textbf{Rest:} Dissertation}
 \end{itemize}
+
+\section*{Resources Declaration}
+
+Development will require a computer with the Android SDK installed. Most 
+of the work will be done on my personal computer (Asus UL20A laptop, 
+Intel Core 2 Duo 1.3GHz CPU, 4GB RAM, 320GB HDD). I accept full 
+responsibility for this machine and I have made contingency 
+plans to protect myself against hardware and/or software failure.
+Testing on a large sample of applications will be executed on a 
+PWF machine. 
+
+GITHUB
+
+Large collection of infected applications have been obtained from the
+Android Malware Genome Project \footnote[3]{www.malgenomeproject.org}. 
+Sufficient disc allocation of 3GB will be needed on the PWF to store
+a snapshot of the repository. 
+
+An Android smartphone will be supplied by Dr Alastair Beresford 
+(arb33@cam.ac.uk) to test the project on. In case of problems, the Android 
+emulator can be used instead.
 
 %\printbibliography
 \end{document}
