--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -89,6 +89,15 @@ executable code from the application's package and instrumenting it to
 carry out the information-flow analysis itself, without any modification 
 to the platform needed, which is what this project will try to attain.
 
+The low-level method makes it possible to trace the tainted data 
+throughout the system by patching the IPC kernel module, or by storing the 
+taint within attributes of files. This cannot be done by per-application 
+bytecode instrumentation, but the fact that each application is processed 
+before it is loaded back into the device and executed leaves room for static 
+analysis of the code, perhaps even modification of its behaviour. Limitations 
+and advantages of both solutions will be thoroughly compared in the evaluation 
+section of the dissertation.
+
 Despite being intended mostly for use by professionals, the configuration 
 of monitored privacy policies should be intuitive enough even for users 
 without deep understanding of dynamic taint analysis. Typical user will:
@@ -102,32 +111,24 @@ without deep understanding of dynamic taint analysis. Typical user will:
       violations}
 \end{itemize}
 
-Obviously, the low-level method makes it possible to trace the tainted data 
-throughout the system by patching the IPC kernel module, or by storing the 
-taint within attributes of files. This cannot be done by per-application 
-bytecode instrumentation, but the fact that each application is processed 
-before it is loaded back into the device and executed leaves room for static 
-analysis of the code, perhaps even modification of its behaviour. Limitations 
-and advantages of both solutions will be thoroughly compared in the evaluation 
-section of the dissertation
-
 \section*{Starting Point}
+
+Even though numerous tools have been developed to help identify malware on 
+Android, they have chosen different strategies of doing so. This project
+will build on the strategy implemented in TaintDroid, but will also try to 
+combine its dynamic flow tracing approach with static analysis of the 
+inspected applications. To my knowledge, such tool currently does not exist.
+However, the Androguard\footnote{code.google.com/p/androguard} project provides
+means of decompilation and static analysis of Android applications.
 
 My previous experience includes a UROP internship at the Computer Lab
 in the summer of 2011. Students worked on security-related projects on
 the Android platform, an application for encrypted text-messaging in my
-case.
-
-During my other internship in the summer of 2012, I worked on Java PathFinder,
+case. During my other internship in the summer of 2012, I worked on Java PathFinder,
 a software-verification tool for JVM. My plugin verified correct usage of 
 physical units in scientific computation by runtime assignment of attributes 
 with unit information to numerical values in the memory, and their propagation 
 during arithmetic operations, which can be regarded as a form of flow tracing. 
-
-In this project I hope to combine my prior skills and to apply them in a 
-slightly different environment of the Dalvik VM and Android framework,
-while learning more about the possibilities of static and dynamic analysis
-of bytecode.
 
 \section*{Substance and Structure of the Project}
 
