Proposal: comma removed

--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -345,7 +345,7 @@ plans to protect myself against hardware and/or software failure.
 
 Source code will be managed by the Git revision control system, with
 the repository being hosted on GitHub. Storing the source code in the
-cloud, together with the distributed nature of Git should provide
+cloud together with the distributed nature of Git should provide
 good protection against data loss.
 
 Large collection of infected applications have been obtained from the
