Fragment-style GUI

--- a/android-gui/Dexter/src/main/res/values/strings.xml
+++ b/android-gui/Dexter/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">Dexter</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_package_detail">Package Detail</string>
 
 </resources>
