--- a/android-gui/Dexter/src/main/res/values/strings.xml
+++ b/android-gui/Dexter/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="path_">Path:</string>
     <string name="size_">Size:</string>
     <string name="last_updated_">Last updated:</string>
-    <string name="version_">Version:</string>
+    <string name="version_">Version:</string><string name="instrument">Instrument</string>
 
 </resources>
