--- a/gui-android/Dexter/src/main/res/values/strings.xml
+++ b/gui-android/Dexter/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="path_">Path:</string>
     <string name="size_">Size:</string>
     <string name="last_updated_">Last updated:</string>
-    <string name="version_">Version:</string><string name="instrument">Instrument</string>
+    <string name="version_">Version:</string>
+    <string name="instrument">Instrument</string>
+    <string name="title_activity_instrument">Securing...</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string><string name="analyzing">Analyzing:</string>
 
 </resources>
